feat: Shaka Player com ABR e UI estilo Netflix
- Substituído HLS.js por Shaka Player
- Controles customizados (play/pause, volume, qualidade, fullscreen)
- Seletor de qualidade ABR (360p, 480p, 720p, 1080p, Auto)
- Controle de velocidade (0.5x a 2x)
- Atalhos de teclado (Espaço, F, M, setas)
- Visualização de buffer
- UI estilo Netflix com gradientes
- Corrigido loop de inicialização com refs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "hls.js": "^1.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "shaka-player": "^4.16.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
